--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listViewAnimals"
+    android:id="@+id/blogs_list"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:divider="#0000CC"
     android:dividerHeight="0.1dp" >
-
     </ListView>
